# Coil_Fields

./: .gitignore  CMakeLists.txt  README.md  analysis.ipynb  b_calcs.cpp  data_visualization.cpp  f_calcs.cpp  l_calcs.cpp  point.cpp  runner.cpp  test.pts  vectors.cpp  wire.cpp
data/: B_hifi_1e-1.txt  B_hifi_1e-2.txt  B_lofi_1e-2.txt  L_conv.txt  L_hifi.txt  L_lofi.txt  cross_section.step  f_profiles.txt  grid.pts  lofi.txt  maxb.txt  modified.txt
data/Ansys calculations/: grid.pts
data/Ansys calculations/fld_files/ANSYS/convergence tests/: 01.fld  02.fld  03.fld  04.fld  05.fld  06.fld  07.fld  08.fld
data/Ansys calculations/fld_files/cpp/: converged.fld
data/Ansys calculations/fld_files/cpp/convergence tests/: 00.fld  01.fld  02.fld  03.fld  04.fld  05.fld  06.fld  07.fld  08.fld  09.fld  10.fld  11.fld  12.fld  13.fld  14.fld  15.fld  16.fld  17.fld  18.fld  19.fld  20.fld
data/fld_files/ANSYS/convergence tests/: 01.fld  02.fld  03.fld  04.fld  05.fld  06.fld  07.fld  08.fld  09.fld  10.fld
data/fld_files/cpp/: converged.fld
data/fld_files/cpp/convergence tests/: 00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30
src/: b_calcs.cpp  f_calcs.cpp  integration.cpp
